--- a/src/biomass-harvest-ext.csproj
+++ b/src/biomass-harvest-ext.csproj
@@ -26,10 +26,10 @@
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <!--<OutputPath>C:\BRM\LANDIS_II\GitCode\brmiranda\Core-Model-v7\Tool-Console\src\bin\extensions</OutputPath>-->
     <!--OutputPath>bin\Debug\</OutputPath>-->
-    <OutputPath>..\..\..\..\build\extensions</OutputPath>
+    <OutputPath>..\..\build\extensions</OutputPath>
   </PropertyGroup>
   
   <ItemGroup>
@@ -62,7 +62,7 @@
       <HintPath>..\..\Support-Library-Dlls-v7\Landis.Library.SiteHarvest-v2.dll</HintPath>
     </Reference>
     <Reference Include="Landis.Library.Succession-v8">
-      <HintPath>..\..\Support-Library-Dlls-v7\Landis.Library.Succession-v8.dll</HintPath>
+      <HintPath>..\..\Support-Library-Dlls-v8\Landis.Library.Succession-v9.dll</HintPath>
     </Reference>
   </ItemGroup>
 
